# facet

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.pt.md  calibrate.py  database.py  diagnostics.py  docker-compose.16gb.yml  docker-compose.24gb.yml  docker-compose.8gb.yml  docker-compose.legacy.yml  docker-compose.yml  docker-entrypoint.sh  facet.py  person_viewer.py  photos.py  pyproject.toml  requirements.lock.txt  requirements.txt  scoring_config.default.json  scoring_config.json  tag_existing.py  validate_db.py  viewer.py
.claude/: loop.json
.claude/commands/: adaptive.md  reflexion.md
.claude/patterns/: i18n-sync.md  new-metric-checklist.md  vlm-model-change-checklist.md
.githooks/: commit-msg
.github/: dependabot.yml
.github/workflows/: ci.yml  commit-hygiene.yml
analyzers/: capsule_generator.py  color_facet.py  composition.py  face.py  face_blendshapes.py  form_facet.py  image_cache.py  ocr.py  reverse_geocode.py  skin_tone.py  technical.py
api/: __init__.py  auth.py  config.py  config_writes.py  database.py  db_helpers.py  model_cache.py  path_validation.py  raw_processing.py  similarity_groups.py  subject_bbox.py  types.py
api/models/: auth.py  gallery.py
api/routers/: albums.py  auth.py  burst_culling.py  capsules.py  caption.py  comparison.py  critique.py  cull_preview.py  export.py  faces.py  filter_options.py  folders.py  frame.py  gallery.py  health.py  i18n.py  map.py  memories.py  merge_suggestions.py  persons.py  plugins.py  portfolio.py  proofing.py  ranker.py  saliency.py  scan.py  scenes.py  search.py  social_crop.py  stats.py  thumbnails.py  timeline.py  webdav.py
build-tools/: verify_scan_db.py
client/: .gitignore  README.md  angular.json  ngsw-config.json  package-lock.json  package.json  proxy.conf.json  setup-jest.ts
client/public/: manifest.webmanifest
client/scripts/: gen-i18n-keys.mjs  migrate-i18n.mjs
client/src/: _fonts.scss  index.html  styles.scss  test-setup.ts
comparison/: comparison_manager.py  pair_selector.py
config/: category_filter.py  percentile_normalizer.py  scoring_config.py  scoring_config.schema.json
db/: __init__.py  fts.py  info.py  maintenance.py  schema.py  stats_cache.py  tags.py  weight_snapshots.py
docs/: COMMANDS.md  CONFIGURATION.md  DEPLOYMENT.md  FACE_RECOGNITION.md  INSTALLATION.md  INTEROP.md  README.md  SCORING.md  VIEWER.md  index.html
docs/de/: COMMANDS.md  CONFIGURATION.md  DEPLOYMENT.md  FACE_RECOGNITION.md  INSTALLATION.md  INTEROP.md  README.md  SCORING.md  VIEWER.md
docs/es/: COMMANDS.md  CONFIGURATION.md  DEPLOYMENT.md  FACE_RECOGNITION.md  INSTALLATION.md  INTEROP.md  README.md  SCORING.md  VIEWER.md
docs/fr/: COMMANDS.md  CONFIGURATION.md  DEPLOYMENT.md  FACE_RECOGNITION.md  INSTALLATION.md  INTEROP.md  README.md  SCORING.md  VIEWER.md
docs/it/: COMMANDS.md  CONFIGURATION.md  DEPLOYMENT.md  FACE_RECOGNITION.md  INSTALLATION.md  INTEROP.md  README.md  SCORING.md  VIEWER.md
docs/pt/: COMMANDS.md  CONFIGURATION.md  DEPLOYMENT.md  FACE_RECOGNITION.md  INSTALLATION.md  INTEROP.md  README.md  SCORING.md  VIEWER.md
exiftool/: exiftool_batch.py
faces/: clusterer.py  merge_analyzer.py  processor.py  resource_monitor.py
i18n/: __init__.py
i18n/translations/: de.json  en.json  es.json  fr.json  it.json  pt.json
models/: aesthetic_v25_scorer.py  caption_translator.py  deqa_scorer.py  distortion_classifier.py  florence_tagger.py  junk_classifier.py  model_manager.py  moment_classifier.py  moment_discovery.py  moment_smoothing.py  piaa_prior.py  prompt_scorer.py  pyiqa_scorer.py  ram_tagger.py  saliency_scorer.py  samp_net.py  tagger.py  vlm_backend.py  vlm_composition.py  vlm_tagger.py
optimization/: __init__.py  auto_retrain.py  insights_miner.py  iqa_eval.py  keeper_head.py  label_pairs.py  personal_ranker.py  weight_optimizer.py
plugins/: __init__.py
plugins/examples/: README.md
processing/: batch_processor.py  burst_score.py  metrics_reporter.py  multi_pass.py  portfolio_export.py  resource_monitor.py  scan_state.py  scorer.py  social_crop.py  watcher.py  xmp_export.py  xmp_import.py
scripts/: bench_async_db.py  fit_piaa_prior.py  piaa_experiment.py  score_aesthetic_mlp.py  score_qalign_ava.py  train_aesthetic_mlp.py
scripts/bench/: bench.py
storage/: __init__.py  migrate.py
sync/: immich.py
tests/: conftest.py  test_albums.py  test_analyzers.py  test_assign_visibility.py  test_async_db.py  test_auth.py  test_auto_cull.py  test_auto_retrain.py  test_autotune_gate.py  test_backup.py  test_batch_processor.py  test_batch_processor_e2e.py  test_burst_culling.py  test_calibrate.py  test_capsule_generator.py  test_capsule_star_rating.py  test_capsules.py  test_caption.py  test_cleanup_missing_photos.py  test_cli.py  test_color_facet.py  test_color_quality_gallery.py  test_comparison.py  test_config.py  test_config_scan_dirs.py  test_config_schema.py  test_critique.py  test_cull.py  test_cull_preview.py  test_culling_faces.py  test_culling_pairs.py  test_culling_subjects.py  test_db_helpers.py  test_diagnostics.py  test_distortion_classifier.py  test_dry_run_exit.py  test_error_handlers.py  test_exiftool_batch.py  test_export.py  test_extended_iqa_gallery.py  (+96 more)
utils/: __init__.py  _lazy.py  burst.py  device.py  duplicate.py  embedding.py  image_loading.py  image_transforms.py  selection.py
validation/: database_validator.py
viewer/: __init__.py  auth.py  config.py  db_helpers.py  filters.py  types.py
(+205 files in other folders)
