[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facet-photo"
version = "1.7.0"
description = "AI-powered photo analysis and gallery — score, cull, organise, and explore your photo library with computer vision and face recognition"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nicolas Coevoet", email = "nicolas@coevoet.fr" },
]
keywords = [
    "photo", "photography", "image-quality", "computer-vision", "aesthetic",
    "face-recognition", "photo-scoring", "self-hosted", "topiq", "clip",
    "image-analysis", "composition", "saliency", "face-clustering",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    # torch and torchvision are installed separately with the correct CUDA index URL.
    # See install.sh or docs/INSTALLATION.md for details.
    "open-clip-torch>=2.20.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "imagehash>=4.3.0",
    "rawpy>=0.18.0",
    "insightface>=0.7.0",
    "pyiqa>=0.1.10",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "hdbscan>=0.8.40",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pyjwt>=2.8.0",
    "tqdm>=4.65.0",
    "exifread>=3.0.0",
    "psutil>=5.9.0",
    "reverse_geocoder>=1.5.1",
    "jsonschema>=4.18.0",
]

[project.optional-dependencies]
vlm = [
    # Upper-bounded to match requirements.txt: transformers 5.3+ breaks the batched
    # VLM tagger (Qwen3.5 vision-token handling); 5.2.x is the validated ceiling.
    "transformers>=5.0.0,<5.3",
    "accelerate>=0.25.0",
]
saliency = [
    # BiRefNet subject saliency uses transformers (AutoModelForImageSegmentation)
    "facet-photo[vlm]",
]
gpu-clustering = [
    "cuml",
    "cupy",
]
cull = [
    # OS-trash for the reject-to-trash cull action (viewer.cull.allow_trash).
    "send2trash>=1.8.0",
]
iqa-extended = [
    # Optional extended-IQA tier (scoring_config.json "iqa_extended", OFF by default).
    # aesthetic_v25 needs the predictor package; qalign 4-/8-bit quantisation needs
    # bitsandbytes. Q-Align itself ships with pyiqa; DeQA-Score loads via transformers.
    "aesthetic-predictor-v2-5",
    "bitsandbytes>=0.43.0",
]
watch = [
    "watchdog>=4.0",
]
all = [
    "facet-photo[vlm,saliency,watch]",
]

[project.urls]
Homepage = "https://github.com/ncoevoet/facet"
Repository = "https://github.com/ncoevoet/facet"
Documentation = "https://github.com/ncoevoet/facet/tree/master/docs"
Issues = "https://github.com/ncoevoet/facet/issues"
Discussions = "https://github.com/ncoevoet/facet/discussions"

[project.scripts]
facet = "facet:main"
facet-viewer = "viewer:main"
facet-db = "database:main"
facet-tag = "tag_existing:main"
facet-doctor = "diagnostics:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic",
    "ignore::DeprecationWarning:pkg_resources",
]

[tool.mypy]
# Advisory type checking only — the CI mypy step is non-blocking
# (continue-on-error). Heavy ML deps (torch, cv2, insightface, ...) ship no
# type stubs, so missing imports are ignored rather than reported. The goal is
# a running punch-list for api/; promote to a blocking gate once it is clean.
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.setuptools]
py-modules = ["facet", "viewer", "database", "tag_existing", "calibrate", "validate_db", "diagnostics"]

[tool.setuptools.packages.find]
include = [
    "analyzers*",
    "api*",
    "comparison*",
    "config*",
    "db*",
    "exiftool*",
    "faces*",
    "i18n*",
    "models*",
    "optimization*",
    "processing*",
    "utils*",
    "validation*",
    "plugins*",
]
exclude = ["venv*", "client*", "docs*", "photos_all*", "pretrained_models*"]

[tool.setuptools.package-data]
"*" = ["*.json"]
"i18n" = ["*.json"]
# Pre-built Angular client included in package
"api" = ["../client/dist/client/browser/**/*"]

[tool.ruff.lint.per-file-ignores]
# These modules intentionally run setup code before their imports — sys.path
# bootstrapping (so a script works when run from any directory) and
# warnings.filterwarnings. Reordering the imports would break that setup, so
# E402 (module-import-not-at-top) is expected and suppressed here.
#
# __init__.py files re-export submodule symbols as the package's public API —
# the imports are intentional even when unused within __init__.py itself.
"**/__init__.py" = ["F401"]
"analyzers/face.py" = ["E402"]
"calibrate.py" = ["E402"]
"config/percentile_normalizer.py" = ["E402"]
"config/scoring_config.py" = ["E402"]
"database.py" = ["E402"]
"db/stats_cache.py" = ["E402"]
"db/tags.py" = ["E402"]
"facet.py" = ["E402"]
"faces/processor.py" = ["E402"]
"processing/batch_processor.py" = ["E402"]
"processing/resource_monitor.py" = ["E402"]
"processing/scorer.py" = ["E402"]
"tag_existing.py" = ["E402"]
